force-app/main/default/objects/Fee_Payment__c/Fee_Payment__c.object-meta.xml
<CustomObject>
    <label>Fee Payment</label>
    <nameField>
        <label>Payment Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fee Payments</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>