force-app/main/default/objects/Fee_Payment__c/fields/Enrollment__c.field-meta.xml
<CustomField>
    <fullName>Enrollment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Enrollment</label>
    <referenceTo>Enrollment__c</referenceTo>
    <relationshipLabel>Fee Payments</relationshipLabel>
    <relationshipName>Fee_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>