force-app/main/default/objects/Fee_Payment__c/fields/Student__c.field-meta.xml
<CustomField>
    <fullName>Student__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Student</label>
    <referenceTo>Student__c</referenceTo>
    <relationshipLabel>Fee Payments</relationshipLabel>
    <relationshipName>Fee_Payments</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>