force-app/main/default/objects/Fee_Payment__c/validationRules/Fee_Amount_must_be_positive.validationRule-meta.xml
<ValidationRule>
    <fullName>Fee_Amount_must_be_positive</fullName>
    <active>true</active>
    <errorConditionFormula>Amount_Paid__c &lt; 0</errorConditionFormula>
    <errorDisplayField>Amount_Paid__c</errorDisplayField>
    <errorMessage>Amount Paid cannot be negative.</errorMessage>
</ValidationRule>