force-app/main/default/objects/Fee_Payment__c/validationRules/Validate_Payment_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Payment_Date</fullName>
    <active>true</active>
    <errorConditionFormula>Payment_Date__c &gt; TODAY()</errorConditionFormula>
    <errorDisplayField>Payment_Date__c</errorDisplayField>
    <errorMessage>Payment Date cannot be in the future.</errorMessage>
</ValidationRule>