force-app/main/default/objects/Fee_Payment__c/validationRules/Validate_Payment_Mode.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Payment_Mode</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(TEXT(Payment_Mode__c))</errorConditionFormula>
    <errorDisplayField>Payment_Mode__c</errorDisplayField>
    <errorMessage>Payment Mode is required.</errorMessage>
</ValidationRule>